# ChangeLog for app-shells/fish
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.27 2007/01/18 15:56:29 dberkholz Exp $

*fish-1.22.2 (18 Jan 2007)

  18 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.2.ebuild:
  (#161476) Bump. (#151900) Install to /bin so it's usable as a default shell
  when /usr is unavailable. Still needs an entry in /etc/shells, though. Use
  emake for install instead of make, so MAKEOPTS gets passed through. Seems to
  work fine in parallel.

  02 Dec 2006; Alec Warner <antarus@gentoo.org> fish-1.21.8.ebuild,
  fish-1.21.12.ebuild, fish-1.22.1.ebuild:
  fix homepage for bug 156857

*fish-1.22.1 (13 Nov 2006)

  13 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.1.ebuild:
  Bump.

*fish-1.21.12 (24 Sep 2006)

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.21.12.ebuild:
  (#146789) Bump.

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; fish-1.21.8.ebuild:
  Stable on x86/ppc.

  20 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; -fish-1.18.2.ebuild,
  -fish-1.19.0.ebuild, -fish-1.20.2.ebuild:
  Pull old ebuilds.

  07 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update to my new email address.

  21 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; -fish-1.20.0.ebuild,
  -fish-1.20.1.ebuild, -fish-1.21.1.ebuild, -fish-1.21.3.ebuild,
  -fish-1.21.4.ebuild:
  Pull some old ebuilds.

*fish-1.21.8 (21 Jun 2006)

  21 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.21.8.ebuild:
  Bump. (#131638) Add X USE flag to pull in external x11-misc/xsel. Adds lots
  of other features, see the package ChangeLog for details.

*fish-1.21.4 (08 Apr 2006)

  08 Apr 2006; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.21.4.ebuild:
  This version contains a fix for a build issue on some Power-based systems,
  as well as a fix for a bug causing fish to sometimes return from a job