@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/fish
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.27 2007/01/18 15:56:29 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.28 2007/01/18 23:27:19 opfer Exp $
+
+  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org> fish-1.22.1.ebuild:
+  stable x86, bug #151899
 
 *fish-1.22.2 (18 Jan 2007)
 
